@@ -8095,7 +8095,10 @@ process sentinels.  They shall not disturb each other."
 ;; selector "remote".
 (ert-deftest tramp-test46-file-notifications ()
   "Check that Tramp handles file notifications."
+  :tags '(:unstable)
   (skip-unless (tramp--test-enabled))
+  ;; filenotify.el was reworked in Emacs 31.
+  (skip-unless (tramp--test-emacs31-p))
 
   (let* ((tmp-name (tramp--test-make-temp-name))
 	 ;(file-notify-debug t)
@@ -8114,12 +8117,13 @@ process sentinels.  They shall not disturb each other."
 	(progn
 	  (tramp--test-message "%S" desc1)
 	  (should-not (file-exists-p tmp-name))
-	  (should (file-notify-valid-p desc1))
 	  (should (file-notify-valid-p desc2))
 
-	  ;; Create the file.
+	  ;; Create the file.  `file-notify-valid-p' requires that the
+	  ;; watched file exists, so we cannot check it earlier for `desc1'.
 	  (write-region "foo" nil tmp-name)
 	  (should (file-exists-p tmp-name))
+	  (should (file-notify-valid-p desc1))
 	  ;; Modify.
 	  (write-region "foo" nil tmp-name)
 	  (should (file-exists-p tmp-name))
